# spy-search

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  config.example.json  config.json  docker-compose.yml  go.mod  installation.sh  main.go  main.py  pyproject.toml  report.md  requirements.txt  run.sh  setup.py
.github/workflows/: build-image.yml  ci.yml
api/: readme.md  server.py
db/: chroma.sqlite3
docs/: ch_complex.md  ch_simplify.md  jap.md
docs/examples/: example_report.html
frontend/: README.md  index.html  package-lock.json
frontend/app/: globals.css  page.tsx
frontend/components/: chat-history.tsx  chat-interface.tsx  config-panel.tsx
frontend/src/: App.tsx  index.css
github/workflows/: ci.yml
server/: go.mod  main.go
spy-browser/: readme.md
spy-cli-rust/: Cargo.toml  readme.md
spy-cli-rust/src/: main.rs
spy-search-go/: README.md
spy-search-rust/: Cargo.toml  readme.md
src/: __init__.py  main.py
src/RAG/: __init__.py  chrome.py  local_search.py  summary.py
src/agent/: __init__.py  agent.py  executor.py  planner.py  quick_searcher.py  report.py  reporter.py  retrival.py  retrival_agent.py  scribe.py  search.py  vision.py
src/api/: app.py
src/browser/: __init__.py  autogen.py  browser.py  crawl_ai.py  duckduckgo.py
src/factory/: factory.py
src/model/: __init__.py  anthropic.py  deepseek.py  gemini.py  gork.py  model.py  ollama.py  openai.py
src/prompt/: __init__.py  planner.py  quick_search.py  rag.py  reporter.py  retrival.py  (+2 more)
test/: Readme.md
websearch /: go.mod  main.go
(+45 files in other folders)
