[project]
name = "spy-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.6.3",
    "crawl4ai>=0.6.3",
    "duckduckgo-search>=8.0.3",
    "fastapi[standard]>=0.115.12",
    "google-genai>=1.19.0",
    "langchain-community>=0.3.24",
    "markitdown>=0.1.2",
    "ollama>=0.5.1",
    "openai>=1.85.0",
]
